fix: Add valign styles
Fixes #77

--- a/resources/ext.embedVideo.styles.less
+++ b/resources/ext.embedVideo.styles.less
@@ -89,6 +89,33 @@
 		}
 	}
 
+	&.mw-valign {
+		&-middle {
+			vertical-align: middle;
+		}
+		&-baseline {
+			vertical-align: baseline;
+		}
+		&-sub {
+			vertical-align: sub;
+		}
+		&-super {
+			vertical-align: super;
+		}
+		&-top {
+			vertical-align: top;
+		}
+		&-text-top {
+			vertical-align: text-top;
+		}
+		&-bottom {
+			vertical-align: bottom;
+		}
+		&-text-bottom {
+			vertical-align: text-bottom;
+		}
+	}
+
 	figcaption {
 		// Same as skinning core
 		font-size: 88.4%;
